manifests/homer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
        - name: homer
          resources: {}
          image: ghcr.io/micxba/homer:2025-06-20-a26db3a5-1d99-4fc2-bfd7-5ed955c213ab
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /app/config.yaml
              subPath: config.yaml
      volumes:
        - name: config-volume
          configMap:
            name: homer-config
