manifests/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
spec:
  selector:
    app: homer
  ports:
    - port: 80
      targetPort: 8080
