manifests/homer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer
  annotations:
    external-dns.alpha.kubernetes.io/target: "alljedis.justdied.com"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts: 
        - sith.network
  rules:
    - host: sith.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homer
                port:
                  number: 80
